ファイル構造の変更

--- a/popup.html
+++ b/popup.html
@@ -7,5 +7,5 @@
 		<title>Document</title>
 	</head>
 	<body>習 得 中 ︙</body>
-	<script src="popup.js"></script>
+	<script src="js/popup.js"></script>
 </html>
